--- a/store.html
+++ b/store.html
@@ -86,4 +86,53 @@
           <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328909&sortOrder=top%20selling" target="_blank">View Collection</a>
         </div>
         <div class="collection-card">
-          <img src="imag
+          <img src="images/collections/col-4.jpg" alt="Collection 4">
+          <h3>Awkward Entrance Comic</h3>
+          <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328911&sortOrder=top%20selling" target="_blank">View Collection</a>
+        </div>
+        <div class="collection-card">
+          <img src="images/collections/col-5.jpg" alt="Collection 5">
+          <h3>Mom App Not Found Comic</h3>
+          <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328912&sortOrder=top%20selling" target="_blank">View Collection</a>
+        </div>
+        <div class="collection-card">
+          <img src="images/collections/col-6.jpg" alt="Collection 6">
+          <h3>Stand Out Shark Comic</h3>
+          <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328945&sortOrder=top%20selling" target="_blank">View Collection</a>
+        </div>
+        <div class="collection-card">
+          <img src="images/collections/col-7.jpg" alt="Collection 7">
+          <h3>Cosmic Elements Collection</h3>
+          <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328996&sortOrder=top%20selling" target="_blank">View Collection</a>
+        </div>
+        <div class="collection-card">
+          <img src="images/collections/col-8.jpg" alt="Collection 8">
+          <h3>Megalodon Wisdom Series</h3>
+          <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4329022&sortOrder=top%20selling" target="_blank">View Collection</a>
+        </div>
+        <div class="collection-card">
+          <img src="images/collections/col-9.jpg" alt="Collection 9">
+          <h3>Emotion Geometry Collection</h3>
+          <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4331871&sortOrder=top%20selling" target="_blank">View Collection</a>
+        </div>
+        <div class="collection-card">
+          <img src="images/collections/col-10.jpg" alt="Collection 10">
+          <h3>Elemental Forms Collection</h3>
+          <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4332076&sortOrder=top%20selling" target="_blank">View Collection</a>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
+    <div>© <span id="y"></span> Megu Donni</div>
+    <div><a href="index.html#gallery">Gallery</a> · <a href="index.html#episodes">Episodes</a> · <a href="store.html">Store</a> · <a href="index.html#subscribe">Subscribe</a></div>
+  </div>
+</footer>
+
+<script>document.getElementById('y').textContent=new Date().getFullYear()</script>
+
+</body>
+</html>
