--- a/store.html
+++ b/store.html
@@ -49,6 +49,9 @@
 </head>
 <body>
 
+  <h1 class="store-top">Store Collections</h1>
+
+
 <header class="header">
   <div class="container wrap">
     <div class="brand">
