--- a/store.html
+++ b/store.html
@@ -97,26 +97,34 @@
       <h3>Stand Out Shark</h3>
       <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328945&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
     </div>
-    <div class="collection-card">
-      <img src="images/collections/col-7.jpg" alt="Collection 7">
-      <h3>Collection 7</h3>
-      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328996&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
-    </div>
-    <div class="collection-card">
-      <img src="images/collections/col-8.jpg" alt="Collection 8">
-      <h3>Collection 8</h3>
-      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4329022&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
-    </div>
-    <div class="collection-card">
-      <img src="images/collections/col-9.jpg" alt="Collection 9">
-      <h3>Collection 9</h3>
-      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4331871&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
-    </div>
-    <div class="collection-card">
-      <img src="images/collections/col-10.jpg" alt="Collection 10">
-      <h3>Collection 10</h3>
-      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4332076&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
-    </div>
+   <!-- 7 -->
+<div class="collection-card">
+  <img src="images/collections/col-7.jpg" alt="Happy Birthday Legendary">
+  <h3>Happy Birthday (Legendary)</h3>
+  <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328996&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
+</div>
+
+<!-- 8 -->
+<div class="collection-card">
+  <img src="images/collections/col-8.jpg" alt="Resetting My Life">
+  <h3>Resetting My Life</h3>
+  <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4329022&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
+</div>
+
+<!-- 9 -->
+<div class="collection-card">
+  <img src="images/collections/col-9.jpg" alt="Swim Deeper, Scream Louder">
+  <h3>Swim Deeper, Scream Louder</h3>
+  <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4331871&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
+</div>
+
+<!-- 10 -->
+<div class="collection-card">
+  <img src="images/collections/col-10.jpg" alt="Earth Has No Barcode">
+  <h3>Earth Has No Barcode</h3>
+  <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4332076&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
+</div>
+
   </div>
 </main>
 
